<resources>
    <string name="app_name">Reproductor de Música</string>
    <string name="play">Reproducir</string>
    <string name="pause">Pausar</string>
    <string name="stop">Detener</string>
    <string name="back">Atrás</string>
    <string name="shuffle">Aleatorio</string>
    <string name="menu">Menú</string>
    <string name="album_title">Kamikaze</string>
    <string name="artist_name">Eminem</string>
    <string name="album_art">Portada del álbum</string>
    <string name="expand">Expandir</string>
    <string name="now_playing">Now playing</string>
    <string name="song_title">Fashion Killer</string>

</resources>